# HiRAD-Gen

./: .gitignore  README.md  cosmo.yaml  era-interpolate-recipe.yaml  era.yaml  interpolate.sh  interpolate_basic.py  interpolate_basic.sh  make_era1h.py  pyproject.toml  read_datasets.py
.edf/: README.md  gemma-pytorch.toml  hirad-ci.toml  ngc-pytorch.toml  ubuntu.toml  ubuntu2.toml
ci/: cscs.yml
ci/docker/: Dockerfile  Dockerfile.build  Dockerfile.ci  Dockerfile.dev
config/containers/: storage.conf
src/hirad/: generate.sh  testrun.sh  train.sh  train_diffusion.sh  train_regression.sh
src/hirad/conf/: generate_era_cosmo.yaml  training_era_cosmo_diffusion.yaml  training_era_cosmo_regression.yaml
src/hirad/datasets/: __init__.py  dataset.py  era5_cosmo.py
src/hirad/distributed/: config.py  manager.py
src/hirad/eval/: __init__.py  crps.py  metrics.py  plotting.py  run_scoring.py
src/hirad/inference/: __init__.py  generate.py  generator.py
src/hirad/losses/: __init__.py  loss.py
src/hirad/models/: __init__.py  dhariwal_unet.py  layers.py  meta.py  preconditioning.py  song_unet.py  unet.py
src/hirad/training/: train.py
src/hirad/utils/: capture.py  checkpoint.py  deterministic_sampler.py  function_utils.py  generate_utils.py  (+3 more)
src/hirad_gen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/input_data/: cosmo-1h.yaml  cosmo-test.yaml  cosmo.yaml  era-1h.yaml  era.yaml  interpolate_basic.py  interpolate_basic_test.py
src/models/: __init__.py  layers.py  preconditioning.py  unet.py
src/utils/: checkpoint.py  deterministic_sampler.py
(+11 files in other folders)
